# nmt_sync_gram

./: .gitignore  Dockerfile  README.md  __int__.py  complete_tree.py  docker-compose.yml  generate_grammar.py  install_apex.sh  pyproject.toml  python_test.sh
experiment/align_deen/: fastalign.sh  gizapp.sh  structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh
experiment/align_enfr/: fastalign.sh  gizapp.sh  structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh
experiment/align_jaen/: fastalign.sh  gizapp.sh  structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh
experiment/align_roen/: fastalign.sh  gizapp.sh  structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh
experiment/iwslt_deen/: structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh  transformer_mma.sh
experiment/wat_jaen/: structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh  transformer_sync.sh
experiment/wat_jazh/: structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh
experiment/wmt_deen/: structformer.sh  structformer_mse.sh  structformer_rank.sh  transformer.sh
preparation/: README.md  prepare_align_deen.sh  prepare_align_enfr.sh  prepare_align_roen.sh  prepare_iwslt14_deen.sh  prepare_kftt_jaen.sh  prepare_wat18_jaen.sh  prepare_wat18_jazh.sh
scripts/: parse_benepar.py  parse_stanford.py  run_fastalign.sh  run_giza.sh
src/: __init__.py  grammar_scorer.py  torch_utils.py  tree.py  tree_test.py  tree_utils.py  tree_utils_test.py
(+25 files in other folders)
